# Y24_Common_Training_Assignments

./: bash.docx
Aiklavya/Assignment CV/: import cv2.py  output.txt
Aiklavya/ros2_assignment_pkg/: package.xml  setup.cfg  setup.py
Aiklavya/ros2_assignment_pkg/ros2_assignment_pkg/: listener.py  talker.py
Aiklavya/ros2_assignment_pkg/ros2_assignment_pkg/launch/: talk_listen_launch.py
Shreyas/: Bandit.txt  Shells.txt
Shreyas/CV/: output.txt
Shreyas/my_talker_listener/: setup.py
Shreyas/my_talker_listener/install/: local_setup.sh  setup.sh
Shreyas/my_talker_listener/install/my_talker_listener/share/my_talker_listener/: package.dsv  package.ps1  package.sh  package.xml
Shreyas/my_talker_listener/launch/: talk_listen.launch.py
Shreyas/my_talker_listener/log/: latest_build
Shreyas/my_talker_listener/my_talker_listener/: listner.py  talker.py
