<?xml version="1.0"?>
<package format="3">
  <name>ros2_assignment_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 assignment package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
